--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                 @media (max-width: 1024px) {
                 #map, #chart { height: 400px; }
                 h1 { font-size: 20px; }
+                h2 { font-size: 15px; }
+                p { font-size: 12px; }
+                #map, #chart { height: 300px; }
+                .dashboard-container { padding: 10px; }
+                .step { margin: 15px 0; padding: 10px; font-size: 10px; }
+                .step h2 { font-size: 10px; margin-bottom: 4px; }
+                .step p { font-size: 8px; }
+                #story-panel { width: 25%; height: 900px; }
             }
 
             /* Mobile */
