Fixed no data message and updated file paths

--- a/task10-16/task15.html
+++ b/task10-16/task15.html
@@ -221,7 +221,7 @@
             // Data Load
             // =============================
 
-            d3.json("data/master_data.geojson").then(geoData => {
+            d3.json("/data/master_data.geojson").then(geoData => {
                 const masterData = geoData.features.map(f => {
                     const p = f.properties;
                     return {
