--- a/task10-16/task11.html
+++ b/task10-16/task11.html
@@ -100,7 +100,7 @@
             // Data Loading
             // =============================
 
-            d3.json("data/master_data.geojson").then(geoData => {
+            d3.json("/data/master_data.geojson").then(geoData => {
                 const masterData = geoData.features.map(f => {
                 const p = f.properties;
                 return {
